Added first section
Yay, I finnaly finished the section by name "About Complex".

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- 
-  Написано по шаблону v1.5 
-  Группа вк, откуда получен шаблон: vk.com/wynyard_official 
+  Написано по шаблону v2.0 
+  Группа вк: vk.com/wynyard_official 
   Создатель шаблона: vk.com/stylelifeweb.wyndace
 -->
 
@@ -61,7 +61,46 @@
     <section id="a01" class="about-complex">
       <div class="content">
         <!-- Код для первой секции сюда -->
-
+        <div class="about-complex__texts">
+          <h1 class="about-complex__header">ЭКСПОФОРУМ</h1>
+          <h3 class="about-complex__sub-header">конгрессно-выставочный центр
+            Санкт-Петербурга</h3>
+          <a href="https://vk.com/wynyard_memes" class="about-complex__text">О комплексе
+            <div class="about-complex__arrow"></div>
+          </a>
+        </div>
+        <div class="about-complex__buttons">
+          <button class="about-complex__button-calendar">
+            <h3 class="about-complex__sub-header">Календарь
+              мероприятий</h3>
+            <a href="https://vk.com/wynyard_memes" class="about-complex__text">Подробнее
+              <div class="about-complex__arrow"></div>
+            </a>
+          </button>
+          <button class="about-complex__button-road">
+            <h3 class="about-complex__sub-header">Как добраться
+              до Экспофорума</h3>
+            <a href="https://vk.com/wynyard_memes" class="about-complex__text">Подробнее
+              <div class="about-complex__arrow"></div>
+            </a>
+          </button>
+          <button class="about-complex__button-sign">
+            <h3 class="about-complex__sub-header">Онлайн-заявка
+              на организацию
+              мероприятия</h3>
+            <a href="https://vk.com/wynyard_memes" class="about-complex__text">Подробнее
+              <div class="about-complex__arrow"></div>
+            </a>
+          </button>
+          <button class="about-complex__button-plan">
+            <h3 class="about-complex__sub-header">План
+              и инфраструктура
+              комплекса</h3>
+            <a href="https://vk.com/wynyard_memes" class="about-complex__text">Подробнее
+              <span class="about-complex__arrow"></span>
+            </a>
+          </button>
+        </div>
         <!-------------------------------->
       </div>
     </section>
@@ -83,6 +122,6 @@
 
 <!-- 
   Написано по шаблону v2.0 
-  Группа вк, откуда получен шаблон: vk.com/wynyard_official 
+  Группа вк: vk.com/wynyard_official 
   Создатель шаблона: vk.com/stylelifeweb.wyndace
 -->
