Added second section
Yep, I have already finished another one section called "About Company"

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           <a href="#a02" class="menu__link">
             <li class="menu__text">О компании</li>
           </a>
-          <a href="#a03" class="menu__link">
+          <a href="#a04" class="menu__link">
             <li class="menu__text">Новости</li>
           </a>
-          <a href="#a04" class="menu__link">
+          <a href="#a03" class="menu__link">
             <li class="menu__text">Медиа-банк</li>
           </a>
           <a href="#a05" class="menu__link">
@@ -97,11 +97,87 @@
               и инфраструктура
               комплекса</h3>
             <a href="https://vk.com/wynyard_memes" class="about-complex__text">Подробнее
-              <span class="about-complex__arrow"></span>
+              <div class="about-complex__arrow"></div>
             </a>
           </button>
         </div>
         <!-------------------------------->
+      </div>
+    </section>
+    <section id="ao2" class="about-company">
+      <div class="content">
+        <ul class="about-company__organize">
+          <h2 class="about-company__title">Организаторам</h2>
+          <div class="about-company__texts">
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Документы организаторам</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Услуги организаторам</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Выставочные площади</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Рестораны и кафе</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Конгресс-центр</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Спорт-центр</li>
+            </a>
+          </div>
+        </ul>
+        <ul class="about-company__exponents">
+          <h2 class="about-company__title">Экспонентам</h2>
+          <div class="about-company__texts">
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Общие условия участия</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Документы экспонентам</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Центр деловых контактов</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Забронировать гостиницу</li>
+            </a>
+          </div>
+        </ul>
+        <ul class="about-company__visitors">
+          <h2 class="about-company__title">Посетителям</h2>
+          <div class="about-company__texts">
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Сервисы</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Онлайн-регистрация
+                на мероприятие </li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Забронировать гостиницу</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Центр деловых контактов</li>
+            </a>
+          </div>
+        </ul>
+        <ul class="about-company__media">
+          <h2 class="about-company__title">Прессе</h2>
+          <div class="about-company__texts">
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Аккредитация</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Пресс-служба</li>
+            </a>
+            <a href="https://vk.com/wynyard_memes" class="about-company__text">
+              <li>Правила аккредитации</li>
+            </a>
+          </div>
+        </ul>
       </div>
     </section>
     <!---------------------->
