Added third section
Yay, I have just finished section "Media Bank" ^_^

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-------------------------------->
       </div>
     </section>
-    <section id="ao2" class="about-company">
+    <section id="a02" class="about-company">
       <div class="content">
         <ul class="about-company__organize">
           <h2 class="about-company__title">Организаторам</h2>
@@ -178,6 +178,55 @@
             </a>
           </div>
         </ul>
+      </div>
+    </section>
+    <section id="a03" class="media-bank">
+      <div class="content">
+        <div class="media-bank__texts">
+          <h2 class="media-bank__title">Текущие и будущие мероприятия
+          </h2>
+          <a href="https://vk.com/wynyard_memes" class="media-bank__events-history">Все мероприятия
+            <div class="media-bank__arrow"></div>
+          </a>
+        </div>
+        <div class="media-bank__events-list">
+          <div class="media-bank__item">
+            <img src="./img/events/01.jpg" class="media-bank__img">
+            <p class="media-bank__date">2 января 2020 г. – 7 января 2020 г.</p>
+            <h3 class="media-bank__mini-title">ЭКСПО ЕЛКА</h3>
+            <p class="media-bank__text">Парк интерактивных развлечений</p>
+          </div>
+          <div class="media-bank__item"><img src="./img/events/02.jpg" class="media-bank__img">
+            <p class="media-bank__date">5 февраля 2020 г. – 9 февраля 2020 г.</p>
+            <h3 class="media-bank__mini-title">Junwex Петербург</h3>
+            <p class="media-bank__text">Выставка ювелирных изделий</p>
+          </div>
+          <div class="media-bank__item">
+            <img src="./img/events/03.jpg" class="media-bank__img">
+            <p class="media-bank__date">7 февраля 2020 г. – 9 февраля 2020 г.</p>
+            <h3 class="media-bank__mini-title">Невский ларец</h3>
+            <p class="media-bank__text">Выставка-ярмарка народных художественных
+              промыслов и ремесел</p>
+          </div>
+          <div class="media-bank__item">
+            <img src="./img/events/04.jpg" class="media-bank__img">
+            <p class="media-bank__date">14 февраля 2020 г. – 23 февраля 2020 г.</p>
+            <h3 class="media-bank__mini-title">ПОНАЕХАЛИ!</h3>
+            <p class="media-bank__text">Специализированная арт-ярмарка</p>
+          </div>
+          <div class="media-bank__item">
+            <img src="./img/events/05.jpg" class="media-bank__img">
+            <p class="media-bank__date">18 февраля 2020 г. – 21 февраля 2020 г.</p>
+            <h3 class="media-bank__mini-title">VET.CAMP</h3>
+            <p class="media-bank__text">Конференция для ветеринарных врачей</p>
+          </div>
+          <div class="media-bank__item">
+            <img src="./img/events/06.jpg" class="media-bank__img">
+            <p class="media-bank__date">26 февраля 2020 г. – 28 февраля 2020 г.</p>
+            <h3 class="media-bank__mini-title">ExpoHoReCa</h3>
+            <p class="media-bank__text">Специализированная выставка</p>
+          </div>
+        </div>
       </div>
     </section>
     <!---------------------->
